; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_ptrace.c_ptrace_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_ptrace.c_ptrace_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@PT_SYSCFG = common dso_local global i32 0, align 4
@TRACE_BITS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ptrace_enable(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  %3 = alloca i64, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %4 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %5 = load i32, i32* @PT_SYSCFG, align 4
  %6 = call i64 @get_reg(%struct.task_struct* %4, i32 %5)
  %7 = load i64, i64* @TRACE_BITS, align 8
  %8 = or i64 %6, %7
  store i64 %8, i64* %3, align 8
  %9 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %10 = load i32, i32* @PT_SYSCFG, align 4
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @put_reg(%struct.task_struct* %9, i32 %10, i64 %11)
  ret void
}

declare dso_local i64 @get_reg(%struct.task_struct*, i32) #1

declare dso_local i32 @put_reg(%struct.task_struct*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
